fix menu icon alignments

--- a/src/pages/Home/css/style.scss
+++ b/src/pages/Home/css/style.scss
@@ -64,7 +64,7 @@ body {
       color: $light-color;
       font-size: 14px;
       cursor: pointer;
-      svg{
+      svg {
         margin-top: 3px !important;
       }
     }
@@ -76,20 +76,25 @@ body {
   }
   .mobile-menu {
     position: absolute;
-    width: 100%;
     left: 0;
     top: 13%;
+    padding: 0 2.8%;
     ul {
       display: flex;
       flex-direction: column;
       justify-content: center;
       text-align: center;
       background-color: $body-background;
+      gap: 0;
       li {
+        text-decoration: none;
         padding: 10px 0px;
         border-bottom: 1px solid #ccc;
         &:last-child {
           border-bottom: none;
+        }
+        a {
+          text-decoration: none;
         }
       }
     }
